fixed go home button with text-align

--- a/style.css
+++ b/style.css
@@ -172,6 +172,10 @@ form{
   color: rgb(1, 0, 78);;
 }
 
+#highScores{
+   text-align: center;
+}
+
 
 @media only screen and (max-width: 700px)
 {
